--- a/SE4050__Lab01.ipynb
+++ b/SE4050__Lab01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNc+AGY16/Bl487INnPrs3n",
+      "authorship_tag": "ABX9TyPJ8nxrTAbXRFrfBsOVwUHZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "uniform_data = np.random.uniform(low=0, high=4, size=100000)  # Adjusted range\n",
         "normal_data = np.random.normal(loc=1, scale=0.8, size=100000)  # Adjusted parameters\n",
         "\n",
-        "# Create histogram comparison\n",
+        "# histogram comparison\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.hist(exponential_data, density=True, bins=50, histtype=\"step\",\n",
         "         color=\"red\", label=\"Exponential\", alpha=0.8)\n",
@@ -75,7 +75,7 @@
         "plt.hist(normal_data, density=True, bins=50, histtype=\"step\",\n",
         "         color=\"green\", label=\"Normal\", alpha=0.8)\n",
         "\n",
-        "plt.axis([0, 6, 0, 1.2])  # Adjusted for better visualization\n",
+        "plt.axis([0, 6, 0, 1.2])\n",
         "plt.legend(loc=\"upper right\")\n",
         "plt.title(\"Comparison of Random Distributions\")\n",
         "plt.xlabel(\"Value\")\n",
@@ -104,6 +104,18 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "tWqpzxMgi3fd"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -373,7 +385,7 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "df = pd.read_csv(\"Au_nanoparticle_dataset.csv\")  # Make sure the file name matches exactly\n",
+        "df = pd.read_csv(\"/content/sample_data/Au_nanoparticle_dataset.csv\")\n",
         "df.head()\n"
       ],
       "metadata": {
@@ -382,9 +394,9 @@
           "height": 342
         },
         "id": "-iyuWqljJXK0",
-        "outputId": "9a673e12-0446-4811-8f92-ebbde7645f5a"
+        "outputId": "4c5144b8-9da5-4ba4-cd8d-e4f0ecee95f3"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +427,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ad54e4e7-3a02-4f7b-8669-05ff0297023d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-53da672d-7b3b-43b1-996b-8f6a239cc480\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -585,7 +597,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad54e4e7-3a02-4f7b-8669-05ff0297023d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53da672d-7b3b-43b1-996b-8f6a239cc480')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -637,12 +649,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ad54e4e7-3a02-4f7b-8669-05ff0297023d button.colab-df-convert');\n",
+              "        document.querySelector('#df-53da672d-7b3b-43b1-996b-8f6a239cc480 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ad54e4e7-3a02-4f7b-8669-05ff0297023d');\n",
+              "        const element = document.querySelector('#df-53da672d-7b3b-43b1-996b-8f6a239cc480');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -662,8 +674,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-194c7de8-d6de-4cf6-92fb-f5d869bd3011\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-194c7de8-d6de-4cf6-92fb-f5d869bd3011')\"\n",
+              "    <div id=\"df-eafc9ce2-e66b-4b34-b268-c100d59a8d2c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-eafc9ce2-e66b-4b34-b268-c100d59a8d2c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -782,7 +794,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-194c7de8-d6de-4cf6-92fb-f5d869bd3011 button');\n",
+              "            document.querySelector('#df-eafc9ce2-e66b-4b34-b268-c100d59a8d2c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -798,7 +810,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 2
         }
       ]
     },
@@ -1405,17 +1417,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#sssssss"
-      ],
-      "metadata": {
-        "id": "I-2CdYrAcS-q"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
